# openclaw-agents

./: .claudeignore  .cursorignore  .dockerignore  .env.example  .fastio.json  .gitignore  .northflank.yaml  .opencode.json  ADD-SSH-KEY-NOW.txt  AI_INTEGRATION_RECOMMENDATIONS_20260304.json  AI_RESEARCH_CLASSIFIED_20260304.json  AI_RESEARCH_FINDINGS_24H.json  ARCHITECTURE.md  BUILD_TIMESTAMP.txt  CLAUDE.md  CLAUDE.md.opensource  CODE_OF_CONDUCT.md  COMPLETE_TEST_SUMMARY.json  CONNECT-EVERYTHING-NOW.sh  CONTRIBUTING.md  CORRECT-SSH-KEY.txt  COST_GATES_SUMMARY.txt  DASHBOARD_VISUAL_GUIDE.txt  DELIVERABLES_SUMMARY.txt  DEPENDENCIES.md  DEPLOY-OPENCLAW.sh  DEPLOY-WORKER.sh  Dockerfile  Dockerfile.gateway  EMAIL_NOTIFICATIONS_FILES.txt  EMAIL_NOTIFICATIONS_README.txt  ERROR_ARCHITECTURE.txt  ERROR_HANDLER_SUMMARY.txt  EXECUTIVE_SUMMARY.txt  FINAL_TEST_SUMMARY_2026_02_18.json  GITHUB_EXAMPLES.sh  GITHUB_INTEGRATION_SUMMARY.txt  GPU-VPS-OLLAMA-SETUP.sh  LAUNCH_POSTS.md  LICENSE  (+242 more)
.github/: pull_request_template.md
bean-and-bloom/: README.md  index.html  main.js  menu.json  styles.css
benchmarks/: BENCHMARK_SUITE.md  ROUTING_BENCHMARK_REPORT.md  __init__.py  __main__.py  bench_runner.py  benchmarks_bug.txt  conftest.py  problem.py  reporter.py  runner.py  scorer.py
cli/: openclaw_cli.py
cline-plugin/: index.ts  openclaw.plugin.json  test-integration.sh
dashboard/: .gitignore  Dockerfile  README.md  package-lock.json  package.json  tailwind.config.js
dashboard_app/: index.html  learn.html
docs/: ALERTS_SUPABASE_MIGRATION.sql  API.md  API_KEYS_MIGRATION.sql  COMMUNITY.md  CORE_BULLETPROOF.md  DEPLOYMENT.md  DLQ_MIGRATION.sql  JOB_EXECUTION.md  JOB_LEASE_MIGRATION.sql  LEARNING_ROADMAP.md  MEMORY_SYSTEM_INTEGRATION.md  SCALE_READINESS_REPORT.md  STACK-MAP.md  VISION.md  agents.md  architecture.md  client-msa-template.md  comparison.md  configuration.md  contributing.md  copilot-setup.md  cursor-setup.md  faq.md  index.html  index.md  invoice-template.md  ollama-setup.md  operating-agreement-template.md  pc-setup-checklist.txt  pc-setup-quickref.md  pc-setup.md  phase-5a-team-coordinator.md  tools.md
examples/: semantic_memory_examples.py
kubernetes/: configmap.yaml  deployment.yaml  hpa.yaml  namespace.yaml  secrets.yaml  service.yaml
landing/: terms.html
load_tests/: __init__.py  common.py  run_all.py  test_concurrent_submissions.py  test_crash_recovery_under_load.py  test_health_rps.py  test_lease_race_condition.py  test_memory_cost_leak.py  test_provider_failover.py  test_rate_limits.py
mcp_servers/: Dockerfile  __init__.py  pyproject.toml  requirements.txt
mcp_servers/barbershop/: __init__.py  server.json  server.py
mcp_servers/deep-research-mcp/: README.md  package-lock.json  package.json  tsconfig.json
mcp_servers/deep-research-mcp/src/: index.ts  perplexity.ts  research-engine.ts
mcp_servers/restaurant/: __init__.py  server.json  server.py
mcp_servers/shared/: __init__.py  billing.py
openclaw.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
pa_tools/: DEPLOYMENT.md  INTEGRATION_GUIDE.md  __init__.py  __main__.py  orchestrator.py
paws-and-claws/: README.md  index.html  main.js  menu.json  styles.css
pipeline/: README.md  __init__.py  errors.py  guardrails.py  models.py
presentation_output/: Hull_Design_Decision_Matrix_PRELIMINARY.pptx
public/: dashboard.html
reports/: test_callback_20260304_091903.json
research/: claude-flow-swarm-architecture.md
routers/: INTELLIGENT_ROUTING_README.md  TRADING_ROUTER_SPEC.md  __init__.py  admin.py  advanced.py  agent_manage.py  analytics.py  brick_builder.py  chat.py  cost_quota.py  cursor_tasks.py  dispatch.py  extra.py  google_auth.py  health.py  intelligent_routing.py  memory.py  portal.py  shared.py  slack.py  telegram.py  trading.py  twilio.py  websocket.py  workflows.py
scripts/: bundle-a2ui.sh  check-services.sh  connect-pc.sh  daily-report.sh  deploy-northflank.sh  health-check.sh  hourly_health_check.sh  migrate-artifacts.sh  rotate-logs.sh  rsshub-twitter-setup.sh  setup-health-monitoring.sh  start-python-gateway.sh
skills/: agent-onboarding.md  auto-approve-rules.md  barber-crm.md  budget-enforcement.md  bug-fix-workflow.md  client-communication.md  codegen-development.md  concrete-canoe.md  cost-optimization-patterns.md  cost-routing.md  cron-jobs.md  delhi-palace.md  deployment-workflow.md  error-recovery.md  github-tools.md  incident-response.md  index.md  memory-system.md  model-pricing.md  openclaw-platform.md  overseer-coordination.md  pentest-security.md  prestress-calc.md  priority-matrix.md  security-audit-workflow.md  slack-integration.md  supabase-data.md  telegram-integration.md  testing-strategy.md  website-build-workflow.md
static/: dashboard.html
test/: classifier.test.ts
tests/: conftest.py  test_agent_routing.py  test_agent_tool_profiles.py  test_alerts_supabase.py  test_api_rate_limits.py  test_betting_pipeline.py  (+33 more)
(+355 files in other folders)
