[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "openclaw-mcp-tools"
version = "1.0.0"
description = "AI-powered MCP tool servers for restaurants and barbershops by OpenClaw"
readme = "README.md"
license = "MIT"
requires-python = ">=3.11"
authors = [{ name = "OpenClaw", email = "hello@openclaw.dev" }]
keywords = ["mcp", "restaurant", "barbershop", "ai-tools", "claude", "automation"]
classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Topic :: Software Development :: Libraries",
]
dependencies = ["fastmcp>=3.0.0"]

[project.optional-dependencies]
supabase = ["supabase>=2.0.0"]
stripe = ["stripe>=7.0.0"]
full = ["supabase>=2.0.0", "stripe>=7.0.0", "twilio>=9.0.0"]

[project.urls]
Homepage = "https://openclaw.dev"
Repository = "https://github.com/openclaw-ai/mcp-tools"

[project.scripts]
openclaw-restaurant = "mcp_servers.restaurant.server:mcp.run"
openclaw-barbershop = "mcp_servers.barbershop.server:mcp.run"
